# discordo

./: Cargo.toml  README.md
cmd/run/: message_input.go  messages_text.go
src/: application.rs  main.rs
src/discord/: gateway.rs
src/discord/gateway/: event.rs  session.rs
