[package]
name = "discordo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
futures = "0.3.28"
ratatui = "0.21.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
serde_repr = "0.1.14"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
